# doppy-di

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  container.py  docker-compose.yml  noxfile.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
devkit/: __init__.py  logging.py  nested.py  policy.py  validation.py
tests/: conftest.py  test_cycle_detection.py  test_devkit_validation.py  test_edge_cases.py  test_logging_container.py  test_nested_policy.py  test_policy_integration.py
